--- a/openapi/user-api.yaml
+++ b/openapi/user-api.yaml
@@ -4,14 +4,19 @@ info:
   title: User Management API
   version: 0.0.1
 
+servers:
+  - url: /api/v1
+    description: Version 1 of the API
+
 security:
   - bearerAuth: [ ]
+  - basicAuth: [ ]
 
 paths:
   /users:
     post:
       security:
-        - bearerAuth: [ ]
+        - basicAuth: [ ]
       summary: Create a new user
       operationId: createUser
       requestBody:
@@ -37,7 +42,7 @@ paths:
   /users/{id}:
     get:
       security:
-        - bearerAuth: [ ]
+        - basicAuth: [ ]
       summary: Get user information
       operationId: getUser
       parameters:
@@ -56,7 +61,7 @@ paths:
 
     put:
       security:
-        - bearerAuth: [ ]
+        - basicAuth: [ ]
       summary: Update user information
       operationId: updateUser
       parameters:
@@ -85,7 +90,7 @@ paths:
 
     delete:
       security:
-        - bearerAuth: [ ]
+        - basicAuth: [ ]
       operationId: deleteUser
       summary: Delete a user
       parameters:
@@ -104,7 +109,7 @@ paths:
 
     patch:
       security:
-        - bearerAuth: [ ]
+        - basicAuth: [ ]
       operationId: patchUser
       summary: Partially update a user
       parameters:
@@ -134,7 +139,7 @@ paths:
   /users/{id}/audit:
     get:
       security:
-        - bearerAuth: [ ]
+        - basicAuth: [ ]
       summary: Get audit log of user updates
       operationId: getUserAudit
       parameters:
@@ -192,6 +197,9 @@ components:
       type: http
       scheme: bearer
       bearerFormat: JWT
+    basicAuth:    # Changed from bearerAuth
+      type: http
+      scheme: basic
 
   responses:
     UserCreated:
