--- a/application/src/main/resources/application.yaml
+++ b/application/src/main/resources/application.yaml
@@ -12,3 +12,9 @@ spring:
         hibernate:
           envers:
             audit_table_suffix: _audit
+
+springdoc:
+  swagger-ui:
+    urls:
+      - name: User API
+        url: /api-docs/user-api.yaml
