feat: secure GET endpoint and use @PreAuthorize

--- a/application/src/main/resources/static/api-docs/user-api.yaml
+++ b/application/src/main/resources/static/api-docs/user-api.yaml
@@ -5,7 +5,7 @@ info:
   version: 0.0.1
 
 servers:
-  - url: /api/v1
+  - url: http://localhost:8080/api/v1
     description: Version 1 of the API
 
 security:
@@ -197,7 +197,7 @@ components:
       type: http
       scheme: bearer
       bearerFormat: JWT
-    basicAuth:    # Changed from bearerAuth
+    basicAuth: # Changed from bearerAuth
       type: http
       scheme: basic
 
